; ModuleID = '/home/carl/AnghaBench/linux/fs/unicode/extr_utf8-norm.c_utf8agemin.c'
source_filename = "/home/carl/AnghaBench/linux/fs/unicode/extr_utf8-norm.c_utf8agemin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utf8data = type { i32 }

@UTF8HANGULLEAF = common dso_local global i32 0, align 4
@utf8agetab = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8agemin(%struct.utf8data* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.utf8data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.utf8data* %0, %struct.utf8data** %4, align 8
  store i8* %1, i8** %5, align 8
  %12 = load i32, i32* @UTF8HANGULLEAF, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %9, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %10, align 8
  %16 = load %struct.utf8data*, %struct.utf8data** %4, align 8
  %17 = icmp ne %struct.utf8data* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %59

19:                                               ; preds = %2
  %20 = load %struct.utf8data*, %struct.utf8data** %4, align 8
  %21 = getelementptr inbounds %struct.utf8data, %struct.utf8data* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %51, %19
  %24 = load i8*, i8** %5, align 8
  %25 = load i8, i8* %24, align 1
  %26 = icmp ne i8 %25, 0
  br i1 %26, label %27, label %57

27:                                               ; preds = %23
  %28 = load %struct.utf8data*, %struct.utf8data** %4, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = call i32* @utf8lookup(%struct.utf8data* %28, i8* %15, i8* %29)
  store i32* %30, i32** %6, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %34, label %33

33:                                               ; preds = %27
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %59

34:                                               ; preds = %27
  %35 = load i32*, i32** @utf8agetab, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = call i64 @LEAF_GEN(i32* %36)
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  %39 = load i32, i32* %38, align 4
  store i32 %39, i32* %8, align 4
  %40 = load i32, i32* %8, align 4
  %41 = load %struct.utf8data*, %struct.utf8data** %4, align 8
  %42 = getelementptr inbounds %struct.utf8data, %struct.utf8data* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = icmp sle i32 %40, %43
  br i1 %44, label %45, label %51

45:                                               ; preds = %34
  %46 = load i32, i32* %8, align 4
  %47 = load i32, i32* %7, align 4
  %48 = icmp slt i32 %46, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %45
  %50 = load i32, i32* %8, align 4
  store i32 %50, i32* %7, align 4
  br label %51

51:                                               ; preds = %49, %45, %34
  %52 = load i8*, i8** %5, align 8
  %53 = call i32 @utf8clen(i8* %52)
  %54 = load i8*, i8** %5, align 8
  %55 = sext i32 %53 to i64
  %56 = getelementptr inbounds i8, i8* %54, i64 %55
  store i8* %56, i8** %5, align 8
  br label %23

57:                                               ; preds = %23
  %58 = load i32, i32* %7, align 4
  store i32 %58, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %59

59:                                               ; preds = %57, %33, %18
  %60 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %60)
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @utf8lookup(%struct.utf8data*, i8*, i8*) #2

declare dso_local i64 @LEAF_GEN(i32*) #2

declare dso_local i32 @utf8clen(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
